--- a/Bliblioteca 2020/scss/estilo.scss
+++ b/Bliblioteca 2020/scss/estilo.scss
@@ -165,10 +165,7 @@ h1{
 .frame {
   height: 575px;
   width: 430px;
-  background:
-    linear-gradient(
-    rgba(35,43,85,0.75),
-    rgba(35,43,85,0.95));
+  background: linear-gradient(rgba(35,43,85,0.75),rgba(35,43,85,0.95));
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
@@ -179,9 +176,7 @@ h1{
   transition: all .5s ease;
 }
 
-.frame-long {
-  height: 615px;
-}
+.frame-long {height: 615px;}
 
 .frame-short {
   height: 400px;
@@ -197,6 +192,11 @@ h1{
   transition: all .5s ease;
 }
 
+.nav.nav-login ul{
+  text-align: center;
+  width: 100%;
+  padding: 0;
+}
 
 li.li-form-login {
   padding-left: 10px;
@@ -240,6 +240,83 @@ li.li-form-login {
   transition: all .25s ease;
 }
 
+.form-login {
+  position: relative;
+  height: 80px;
+  overflow: hidden;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.form-login {
+  label {
+    position: absolute;
+    bottom: 13px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    border-bottom: 1px solid #E6E6E6;
+    font-weight: 300;
+  }
+}
+
+.form-login {
+  label::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  border-bottom: 2px solid #BABABA;
+  transform: translateX(-100%);
+  transition: all 0.3s ease;
+  }
+}
+
+.form-login label span.content-name {
+  position: absolute;
+  bottom: 5px;
+  left: 0px;
+  padding-bottom: 0!important;
+  transition: all 0.3s ease;
+  color: #fff !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+}
+
+.form-login > .content-name {
+  span:last-child {
+    height: 22px;
+  }
+}
+
+.form-login {
+  input:focus {
+    outline: none;
+  }
+}
+
+.form-login input:focus + .label-name .content-name,
+.form-login input:valid + .label-name .content-name {
+  transform: translateY(-100%);
+  left: 0px;
+  color: #fff;
+}
+
+.form-login input:focus + .label-name::after,
+.form-login input:valid + .label-name::after {
+  transform: translateX(0%);
+}
+
+.form-login input:focus+.label-name .content-name{
+  color: #fff;
+}
+
 .form-signin {
   width: 430px;
   height: 375px;
@@ -247,7 +324,7 @@ li.li-form-login {
 	font-weight: 300;
   padding-left: 37px;
   padding-right: 37px;
-  padding-top: 55px;
+  padding-top: 35px;
   transition: opacity .5s ease, transform .5s ease;
 }
 
@@ -263,7 +340,7 @@ li.li-form-login {
 	font-weight: 300;
   padding-left: 37px;
   padding-right: 37px;
-  padding-top: 55px;
+  padding-top: 35px;
   position: relative;
   top: -375px;
   left: 400px;
@@ -279,6 +356,16 @@ li.li-form-login {
 .form-signup-down {
   top: 0px;
   opacity: 0;
+}
+
+.form-login input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent !important;
+  padding-left: 0;
+  color: #fff;
+  font-weight: 600;
 }
 
 #check path {
@@ -300,16 +387,7 @@ li.li-form-login {
 .form-signin input, .form-signup input {
   color: #ffffff;
   font-size: 13px;
-}
-
-.form-styling {
-  width: 100%;
-  height: 35px;
-	padding-left: 15px;
-	border: none;
-	border-radius: 20px;
-  margin-bottom: 20px;
-  background: rgba(255,255,255,.2);
+  font-weight: 100;
 }
 
 label.label-form-login {
@@ -326,10 +404,10 @@ label.label-form-login {
 :focus {outline: none;}
 
 .form-signin input:focus, textarea:focus, .form-signup input:focus, textarea:focus {
-    background: rgba(255,255,255,.3);
-    border: none;
-    padding-right: 40px;
-    transition: background .5s ease;
+  background: rgba(255,255,255,.3);
+  border: none;
+  padding-right: 40px;
+  transition: background .5s ease;
  }
 
 #checkbox[type="checkbox"]:not(:checked),
@@ -342,9 +420,9 @@ label.label-form-login {
 #checkbox[type="checkbox"]:checked + label {
   position: relative;
   padding-left: 85px;
-  padding-top: 2px;
+  padding-top: 1px;
   cursor: pointer;
-  margin-top: 8px;
+  margin-top: 30px;
 }
 
 #checkbox[type="checkbox"]:not(:checked) + label:before,
@@ -507,7 +585,7 @@ a.btn-signup:hover, a.btn-signin:hover {
 }
 
 .color-white{
-    color: #fff;
+  color: #fff;
 }
 
 // fim form para tela de login
