Atualizando componente Form tela de login.

--- a/Bliblioteca 2020/scss/estilo.scss
+++ b/Bliblioteca 2020/scss/estilo.scss
@@ -27,6 +27,11 @@ h1{
   padding: 10px;
 }
 
+.box > h6{
+  color: #e83e8c;
+  padding: 5px 0;
+}
+
 .box > p{
   background: #FBFBFB;
   padding: 10px;
