Atualização da biblioteca + componente tela form login.

--- a/Bliblioteca 2020/scss/estilo.scss
+++ b/Bliblioteca 2020/scss/estilo.scss
@@ -416,7 +416,7 @@ label.label-form-login {
  }
 
 #checkbox[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked {
+#checkbox[type="checkbox"]:checked {
   position: absolute;
   display: none;
 }
